--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -146,6 +146,9 @@
 			}
 		})();
 	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+	<script type="module" src="/build/demo.esm.js"></script>
+	<script nomodule src="/build/demo.js"></script>
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/plgmlhohecdddhbmmkncjdmlhcmaachm">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -385,8 +388,10 @@
 		<p>
 			Please ensure JavaScript is enabled.
 		</p>
+		
 	</div>
 </div>
+
 <script type="text/javascript">
 /**
  * Main
